--- a/frontend/src/components/LogSheets.css
+++ b/frontend/src/components/LogSheets.css
@@ -68,8 +68,8 @@
 .log-header-top {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 20px;
-  gap: 30px;
+  margin-bottom: 6px;
+  gap: 15px;
 }
 
 .header-left {
@@ -81,22 +81,22 @@
 }
 
 .header-instructions {
-  font-size: 0.75rem;
-  margin-bottom: 12px;
-  padding: 5px;
+  font-size: 0.7rem;
+  margin-bottom: 5px;
+  padding: 3px;
   background-color: #f0f0f0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 47px;
+  min-height: 30px;
   align-items: flex-start;
 }
 
 .header-field-dot {
-  margin-bottom: 12px;
+  margin-bottom: 5px;
   display: flex;
   align-items: baseline;
-  gap: 8px;
+  gap: 6px;
 }
 
 .header-field-dot label {
@@ -182,15 +182,15 @@
 }
 
 .log-header {
-  margin-bottom: 20px;
-  padding-bottom: 15px;
+  margin-bottom: 8px;
+  padding-bottom: 6px;
   border-bottom: 1px solid #333;
 }
 
 .header-row {
   display: flex;
-  margin-bottom: 10px;
-  gap: 20px;
+  margin-bottom: 4px;
+  gap: 10px;
 }
 
 .header-field {
@@ -285,9 +285,9 @@
   padding: 15px;
   border: 1px solid #000;
   border-radius: 8px;
-  background: #ffa17f;
-  background: -webkit-linear-gradient(to right, #ffa17f, #00223e);
-  background: linear-gradient(to right, #ffa17f, #00223e);
+  background: #ba5370;
+  background: -webkit-linear-gradient(to right, #ba5370, #f4e2d8);
+  background: linear-gradient(to right, #ba5370, #f4e2d8);
 }
 
 .total-row {
@@ -315,9 +315,9 @@
   border-radius: 8px;
   padding: 15px;
   min-height: 100px;
-  background: #ffa17f;
-  background: -webkit-linear-gradient(to right, #ffa17f, #00223e);
-  background: linear-gradient(to right, #ffa17f, #00223e);
+  background: #ba5370;
+  background: -webkit-linear-gradient(to right, #ba5370, #f4e2d8);
+  background: linear-gradient(to right, #ba5370, #f4e2d8);
 }
 
 .remarks-label {
@@ -351,9 +351,9 @@
   border-radius: 8px;
   padding: 15px;
   min-height: 100px;
-  background: #ffa17f;
-  background: -webkit-linear-gradient(to right, #ffa17f, #00223e);
-  background: linear-gradient(to right, #ffa17f, #00223e);
+  background: #ba5370;
+  background: -webkit-linear-gradient(to right, #ba5370, #f4e2d8);
+  background: linear-gradient(to right, #ba5370, #f4e2d8);
 }
 
 .recap-label {
